# dvds3

./: .gitignore  CMakeLists.txt  README.md  format.sh
.github/workflows/: nightly.yml
ci/linux/: build-ubuntu.sh
ci/windows/: package-windows.cmd
data/locale/: en-US.ini
package/: README.txt  README.txt.in  installer-Windows.iss.in  package-linux.sh  package-windows.ps1
src/: dvd.c
